--- a/_scss/styles/sections/about.scss
+++ b/_scss/styles/sections/about.scss
@@ -2,7 +2,36 @@
   transform: translateY(3em);
   margin-top: 3em;
   //overflow-x: hidden;
+  //overflow-x: hidden;
 }
+
+@media (min-width: 768px){
+  #about {
+    margin-top: 1em;
+  }
+}
+
+#about-wrapper {
+  width: 100%;
+  margin:0;
+  padding:0;
+  overflow-x:hidden;
+  overflow-y:hidden;
+}
+
+@media (min-width: 769px){
+  #about-wrapaper {
+    height:150vh;
+    overflow-y:visible;
+  }
+}
+
+//
+//@media (min-width: 1200px){
+//  #about {
+//    overflow-x: visible;
+//  }
+//}
 
 //@media (min-width: 1200px){
 //  #about {
